fix: fix Header position

--- a/src/Components/Mulecule/HeaderBar/HeaderBar.module.scss
+++ b/src/Components/Mulecule/HeaderBar/HeaderBar.module.scss
@@ -6,7 +6,7 @@
     height: 50px;   
 
     margin-top: 20px;
-    position: fixed;
+    position: absolute;
     top: 0;
     align-items: center;
 
@@ -24,4 +24,5 @@
 .positinElement{
     margin-left: 20px;
     margin-right: 20px;
+    align-items: center;
 }
