--- a/src/Components/Mulecule/HeaderBarFooter/HeaderBarFooter.module.scss
+++ b/src/Components/Mulecule/HeaderBarFooter/HeaderBarFooter.module.scss
@@ -5,8 +5,7 @@
     width: 1920px;
     height: 50px;
 
-    position: fixed;
-    top: 0;
+    position: absolute;
     margin-top: 285px;
 
     align-items: center;
