create new page

--- a/src/Components/Atoms/DiveLine/DiveLine.module.scss
+++ b/src/Components/Atoms/DiveLine/DiveLine.module.scss
@@ -1,8 +1,8 @@
 .NewsDivLine {
   height: 1px;
   width: 100%;
-  border-top-color: rgb(242, 242, 242);
+  border-top-color: #3a3a3a76;
   border-top-style: solid;
   border-top-width: 1.5px;
-  background: rgb(242, 242, 242);
+  background: #3a3a3a82;
 }
